{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 47,
  "lineage": "03d9d463-710b-ae8a-2ff3-9a1afcc29689",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024124091015:internet-gateway/igw-0bd9ee8769f4b75c2",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-04b16fb3bf0331aa2"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-04b16fb3bf0331aa2"
                ]
              }
            ],
            "id": "igw-0bd9ee8769f4b75c2",
            "internet_gateway_id": "igw-0bd9ee8769f4b75c2",
            "owner_id": "024124091015",
            "tags": {
              "Name": "jambonz-siprec-igw"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024124091015:vpc/vpc-04b16fb3bf0331aa2",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02bb94ea4687d676f",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-836915f8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b16fb3bf0331aa2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0da47e7e6fa36dabd",
            "owner_id": "024124091015",
            "tags": {
              "Name": "jambonz-siprec-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a04bc4da14dba61f",
            "arn": "arn:aws:ec2:us-east-1:024124091015:elastic-ip/eipalloc-0a04bc4da14dba61f",
            "association_id": "eipassoc-03b493dbca9196c9e",
            "domain": "vpc",
            "id": "eipalloc-0a04bc4da14dba61f",
            "instance": "i-020bd3abf25a36d7d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01876c18435c2f01d",
            "private_dns": "ip-10-0-2-222.ec2.internal",
            "private_ip": "10.0.2.222",
            "public_dns": "ec2-34-206-236-146.compute-1.amazonaws.com",
            "public_ip": "34.206.236.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "audiohook-server-eip"
            },
            "tags_all": {
              "Name": "audiohook-server-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_instance.server",
            "aws_security_group.server",
            "aws_subnet.public",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-009d9173b44d0482b",
            "arn": "arn:aws:ec2:us-east-1:024124091015:instance/i-020bd3abf25a36d7d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "audiohook-server-ec2-profile",
            "id": "i-020bd3abf25a36d7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "audiohook-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01876c18435c2f01d",
            "private_dns": "ip-10-0-2-222.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.222",
            "public_dns": "ec2-18-234-200-84.compute-1.amazonaws.com",
            "public_ip": "18.234.200.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ffba56e1134e599d",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f4c1c3e55943d5e",
            "tags": {
              "Name": "audiohook-server-server"
            },
            "tags_all": {
              "Name": "audiohook-server-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03756fabcdf731977"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_security_group.server",
            "aws_subnet.public",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024124091015:route-table/rtb-001e893181a6413dc",
            "id": "rtb-001e893181a6413dc",
            "owner_id": "024124091015",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd9ee8769f4b75c2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "audiohook-server-public-rt"
            },
            "tags_all": {
              "Name": "audiohook-server-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b16fb3bf0331aa2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_internet_gateway.existing",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bce687e5bcc58a80",
            "route_table_id": "rtb-001e893181a6413dc",
            "subnet_id": "subnet-01f4c1c3e55943d5e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "data.aws_availability_zones.available",
            "data.aws_internet_gateway.existing",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024124091015:security-group/sg-03756fabcdf731977",
            "description": "Security group for audiohook server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03756fabcdf731977",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP / ACME challenge",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "98.91.169.216/32",
                  "44.219.169.108/32",
                  "3.86.215.11/32",
                  "91.142.239.226/32",
                  "149.88.96.50/32"
                ],
                "description": "Audiohook WebSocket port",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "98.91.169.216/32",
                  "44.219.169.108/32",
                  "3.86.215.11/32",
                  "91.142.239.226/32",
                  "149.88.96.50/32"
                ],
                "description": "HTTPS - restricted to allowed IPs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "audiohook-server-sg",
            "name_prefix": "",
            "owner_id": "024124091015",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "audiohook-server-sg"
            },
            "tags_all": {
              "Name": "audiohook-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b16fb3bf0331aa2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:024124091015:subnet/subnet-01f4c1c3e55943d5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f4c1c3e55943d5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024124091015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "audiohook-server-public-subnet"
            },
            "tags_all": {
              "Name": "audiohook-server-public-subnet"
            },
            "vpc_id": "vpc-04b16fb3bf0331aa2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_vpc.existing"
          ]
        }
      ]
    }
  ]
}